--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">AlercomApp</string>
-    <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_login">Inicio</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
@@ -10,12 +10,27 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment ccccc</string>
-    <string name="data_protection">Esta es la información de proteccón de datos</string>
-    <string name="data_tratamiento">Esta es la información de tratamiento de datos</string>
+
+    <string name="data_protection">La aplicación ALERCOM una aplicación para dispositivos móviles se compromete en dar un correcto tratamiento de
+        los datos que le sean suministrados, según lo establecido para Colombia en la Ley 1581 de 2012.  Si el Usuario no está de acuerdo
+        con los términos establecidos en el ejercicio del Habeas Data deberá abstenerse de ingresar al sitio web o hacer uso de sus servicios.
+    </string>
+    <string name="data_tratamiento">La aplicación ALERCOM en cumplimiento de la Ley 1581 de 2012 de Protección de Datos Personales,
+        se compromete a dar un correcto tratamiento de los datos que le sean suministrados, conforme a los principios y deberes definidos
+        en la Ley y demás normas que traten y regulen sobre esta materia, siempre en desarrollo de las funciones públicas delegadas por
+        el Estado y aquellas propias de la actividad de monitoreo. Los principios y disposiciones de la ley serán aplicables a los datos
+        personales registrados en cualquier base de datos que los haga susceptibles de tratamiento en territorio colombiano por entidades
+        de naturaleza pública o privada. (https://www.sic.gov.co/preguntas-frecuentes-pdp).\nLa recolección, almacenamiento, modificación, estructuración y en su caso, eliminación, de los datos proporcionados por los Usuarios,
+        constituirán operaciones de tratamiento llevadas a cabo por el responsable, con la finalidad de garantizar el correcto funcionamiento
+        de la Aplicación, mantener la relación de prestación de servicio con el Usuario, y para la gestión correcta de la finalidad de esta
+        aplicación. Ver aquí:\nhttps://www.defensoria.gov.co/public/Normograma%202013_html/Normas/Ley_1581_2012.pdf\nPor consecuencia se llevará
+        a cabo el trato descrito con la información personal; la recolección, transferencia, transmisión, almacenamiento, depuración, uso, análisis, actualización, y cruce de datos con la finalidad de prestar el servicio que derive de
+        la aplicación.
+</string>
     <string name="personas">Personas:</string>
     <string name="familias">Familias:</string>
     <string name="textview">TextView</string>
     <string name="mi_perfil">Mi perfil</string>
     <string name="protecci_n_de_datos">Protección de datos</string>
+    <string name="medios_de_vida">Medios de vida:</string>
 </resources>
